[package]
name = "drive9"
version = "0.1.0"
edition = "2021"
description = "drive9 Rust SDK"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
